src/objects/pse__fflib_XXXBatchTestOpportunity2__c.object
<CustomObject>
    <description>NOT TO PACKAGE. Only for unit test</description>
    <fields>
        <fullName>pse__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>XXX Batch Test Opportunity 2s</relationshipLabel>
        <relationshipName>XXX_Batch_Test_Opportunity_2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOT TO PACKAGE. Only for unit test</description>
        <label>XXX Batch Process</label>
        <referenceTo>pse__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Batch Test Opportunity 2s</relationshipLabel>
        <relationshipName>BatchTestOpportunity2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__ForecastCategoryName__c</fullName>
        <label>Forecast Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Omitted</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Best Case</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__NextStep__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>XXX Batch Test Opportunity 2</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XXX Batch Test Opportunity 2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>